# weekend-flight-bot-kiwi

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily.yml  daily_report.yml  test.yml
config/: routes.yaml
data/: history.csv  price_history.json
src/: config.py  email_report.py  emailer.py  filters.py  flights_client.py  flights_fetch.py  history.py  itinerary_extract.py  kiwi_fetch.py  learning.py  mailer.py  main.py  models.py  planner.py  report.py  report_builder.py  sample_provider.py  scrape_transavia.py  scrape_vueling.py  store.py
src/scrapers/: google_flights_ui.py  skyscanner.py  skyscanner_ui.py
templates/: email.html
