[project]
name = "weekend-flight-bot-kiwi"
version = "0.2.0"
description = "Weekend flight price monitor using flights-scraper-real-time (RapidAPI)"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32.0",
  "jinja2>=3.1.0",
]

[project.scripts]
wfb = "src.main:main"

[tool.ruff]
line-length = 100
